<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/two_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/verdanab"
        android:gravity="center"
        android:text="@string/text_encontrado"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_cancelar"
        android:layout_width="405dp"
        android:layout_height="63dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/ic_btn_del"
        android:fontFamily="@font/verdanab"
        android:text="@string/button_cancelar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_chat"
        android:layout_width="405dp"
        android:layout_height="63dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/ic_btn_add_full"
        android:fontFamily="@font/verdanab"
        android:paddingLeft="30dp"
        android:text="@string/button_chat"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_cancelar" />

    <ImageView
        android:id="@+id/logo_uib"
        android:layout_width="924dp"
        android:layout_height="445dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_cancelar"
        app:layout_constraintStart_toEndOf="@+id/two_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two_text"
        app:layout_constraintVertical_bias="0.375"
        app:srcCompat="@drawable/logouib" />

    <!--android:drawablePadding="20dip"-->

</androidx.constraintlayout.widget.ConstraintLayout>